--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>La meva pàgina</title>
+    <title>Hola món</title>
+    <h1>llista de commpra</h1>
+    <ul>
+      <li>mancuaernas</li>
+      <li>bing bong</li>
+      <li>marc roca</li>
+      <li>sabata</li>
+    </ul>
   </head>
   <body>
     <p>Aquesta és la meva pàgina</p>
