--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Hola món</title>
-    <h1>llista de commpra</h1>
-    <ul>
-      <li>mancuaernas</li>
-      <li>bing bong</li>
-      <li>marc roca</li>
-      <li>sabata</li>
-    </ul>
+    <title>Bio</title>
+    <h1><b><c>Bio del Guillem</c></b></h1>
   </head>
   <body>
-    <p>Aquesta és la meva pàgina</p>
+    <p>Hola, soc el Guillem B! Jo seré el primer Mr.Olympia natural.</p>
+    <p>Per aconseguir aixó hauré de aixecar molts pesos al gimnass i menjar una dieta molt bona</p>
+    <p>Aqui tens els meus records personals del gimnass:</p>
+    <ul>
+      <li>Press Banca ---> 71kg</li>
+      <li>Pess Mort -----> 90kg</li>
+      <li>Sentadilla ----> 100kg</li>
+    </ul>
   </body>
 </html>
