--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Bio</title>
-    <h1><b><c>Bio del Guillem</c></b></h1>
+    <h1 style="color:green"><b><c>Bio del Guillem</c></b></h1>
   </head>
   <body>
-    <p>Hola, soc el Guillem B! Jo seré el primer Mr.Olympia natural.</p>
-    <p>Per aconseguir aixó hauré de aixecar molts pesos al gimnass i menjar una dieta molt bona</p>
-    <p>Aqui tens els meus records personals del gimnass:</p>
+    <p style="font-family:verdana">Hola, soc el Guillem B! Jo seré el primer Mr.Olympia natural. 💪</p>
+    <p style="font-family:verdana">Per aconseguir aixó hauré de aixecar molts pesos al gimnass i menjar una dieta molt bona</p>
+    <p style="font-family:verdana">Aqui tens els meus records personals del gimnass:</p>
     <ul>
-      <li>Press Banca ---> 71kg</li>
-      <li>Pess Mort -----> 90kg</li>
-      <li>Sentadilla ----> 100kg</li>
+      <li style="color:red">Press Banca ---> 71kg</li>
+      <li style="color:red">Pess Mort -----> 90kg</li>
+      <li style="color:red">Sentadilla ----> 100kg</li>
     </ul>
   </body>
 </html>
