--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Bio</title>
-    <h1 style="color:green"><b><c>Bio del Guillem</c></b></h1>
+    <h1 style="color:whitesmoke"><b><center>Bio del Guillem</center></b></h1>
   </head>
   <body style="background-color:grey;">
     <p style="font-family:verdana">Hola, soc el Guillem! Jo seré el primer Mr.Olympia natural. 💪</p>
