--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p style="font-family:verdana">Per aconseguir aixó hauré de aixecar molts pesos al gimnass i menjar una dieta molt bona</p>
     <p style="font-family:verdana">Aqui tens els meus records personals del gimnass:</p>
     <ul>
-      <li style="color:red">Press Banca ---> 71kg</li>
-      <li style="color:red">Pess Mort -----> 90kg</li>
+      <li style="color:yellow">Press Banca ---> 71kg</li>
+      <li style="color:orange">Pess Mort -----> 90kg</li>
       <li style="color:red">Sentadilla ----> 100kg</li>
     </ul>
 
