--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ca">
   <head>
-    <link rel="icon" href="https://medium.com/org-hacking/biceps-medina-4e6de222524b">
+    <link rel="icon" href="https://m.media-amazon.com/images/I/61Ap7RL-w-L._AC_UL1280_.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Bio</title>
