--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1 style="color:whitesmoke"><b><center>Bio del Guillem</center></b></h1>
   </head>
   <body style="background-color:grey;">
-    <p style="font-family:verdana">Hola, soc el Guillem! Jo seré el primer Mr.Olympia natural. 💪</p>
-    <p style="font-family:verdana">Per aconseguir aixó hauré de aixecar molts pesos al gimnass i menjar una dieta molt bona</p>
+    <p style="font-family:verdana">Hola, soc el Guillem! Jo seré el primer Mr.Olympia natural 💪. Només prendre creatina i molta proteïna.</p>
+    <p style="font-family:verdana">Per aconseguir aixó hauré de aixecar molts pesos al gimnass però no penso fer cap dieta perquè m'agrada menjar molt.</p>
     <p style="font-family:verdana">Aqui tens els meus records personals del gimnass:</p>
     <ul>
       <li style="color:yellow">Press Banca ---> 71kg</li>
