--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="https://m.media-amazon.com/images/I/61Ap7RL-w-L._AC_UL1280_.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/style.css">
     <title>Bio</title>
     <h1 style="color:whitesmoke"><b><center>Bio del Guillem</center></b></h1>
   </head>
